docs: rearrange pages

--- a/docs/pages/components/avatar.mdx
+++ b/docs/pages/components/avatar.mdx
@@ -3,7 +3,7 @@ title: 'Avatar (Demo)'
 ---
 
 import { ComponentDemo, PropsTable } from '@republik/docs'
-import uiDemoProps from '@republik/ui-docs-demo?props'
+import * as Props from '@republik/ui-docs-demo?props'
 
 # Avatar (Demo)
 
@@ -19,4 +19,4 @@ This is just a demo to show that we can import packages with TSX and [CSS Module
 
 ## Avatar Props
 
-<PropsTable props={uiDemoProps.Avatar} />
+<PropsTable props={Props.Avatar} />
