docs: fix links

--- a/docs/pages/architecture/app/index.mdx
+++ b/docs/pages/architecture/app/index.mdx
@@ -41,7 +41,7 @@ sequenceDiagram
 | `routeChange` | `{ url: string }` | Inform the app that the webview nagivated to the following URL ` |
 | … | - | - |
 
-Also see the [audio-player events](./app/audio-player).
+Also see the [audio-player events](/architecture/app/audio-player).
 
 ### Native app to web app
 
@@ -61,7 +61,7 @@ message-event that is dispatched on the
 | `osColorScheme` | `{ value: string }` | - |
 | `…` | - | - |
 
-Also see the [audio-player events](./app/audio-player).
+Also see the [audio-player events](/architecture/app/audio-player).
 
 
 
