fix(lobbywatch): admin url

--- a/apps/admin/zat/translations/en.json
+++ b/apps/admin/zat/translations/en.json
@@ -4,7 +4,7 @@
     "parameters": {
       "endpoint": {
         "label": "URL zum Admin-Tool",
-        "helpText": "beispielsweise \"https://admin.republik.ch\""
+        "helpText": "beispielsweise \"https://admin.example.com\""
       }
     }
   }
