docs(docs): update docs folder structure

--- a/docs/pages/architecture/www/app-integration.mdx
+++ b/docs/pages/architecture/www/app-integration.mdx
@@ -61,7 +61,7 @@ message-event that is dispatched on the
 | `osColorScheme` | `{ value: string }` | - |
 | `…` | - | - |
 
-Also see the [audio-player events](/architecture/app/audio-player).
+Also see the [audio-player events](/architecture/app/audio-player#events).
 
 
 
