--- a/docs/pages/_app.mdx
+++ b/docs/pages/_app.mdx
@@ -1,6 +1,8 @@
+import "../root.css";
 import "lib/styles.css";
 
 export default function App({ Component, pageProps }) {
-  return <Component {...pageProps} />
+
+return <Component {...pageProps} />
 
 }
