--- a/docs/pages/_app.mdx
+++ b/docs/pages/_app.mdx
@@ -1,4 +1,4 @@
-import "../root.css";
+import "@republik/theme/styles.css";
 import "@republik/theme/fonts.css";
 import "lib/styles.css";
 import { RootColorVariables } from '@project-r/styleguide'
